--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,8 @@ language: android
 jdk: oraclejdk8
 android:
   components:
+    - tools
+    - platform-tools
+    - tools
     - build-tools-25.0.1
     - android-24
