--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    lintOptions {
+        abortOnError false
+    }
 }
 
 dependencies {
@@ -36,5 +39,3 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:24.0.+'
     compile 'com.squareup.picasso:picasso:2.5.2'
 }
-
-
